--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="upload.html">Upload Data</a></li>
             <li><a href="retrain.html">Retrain Model</a></li>
-            <li><a href="predict.html">Predict Disease</a></li>
+            <li><a href="index.html">Predict Disease</a></li>
         </ul>
     </nav>
 
